--- a/NPHSApp/Base.lproj/Main.storyboard
+++ b/NPHSApp/Base.lproj/Main.storyboard
@@ -158,6 +158,13 @@
                                             <color key="textColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uI0-BX-7a4">
+                                            <rect key="frame" x="313" y="131" width="57" height="30"/>
+                                            <state key="normal" title="Remove">
+                                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                        </button>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
@@ -183,6 +190,7 @@
                                     <outlet property="clubText" destination="InA-WT-RGT" id="nEN-f9-Kgo"/>
                                     <outlet property="dateLabel" destination="ues-MX-wTD" id="mtC-h9-G6Q"/>
                                     <outlet property="feedView" destination="M8J-C9-wwG" id="jxd-I1-RYX"/>
+                                    <outlet property="removeButton" destination="uI0-BX-7a4" id="4z6-sJ-JHm"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
